fixed bugs, edited dto's